--- a/estilos/nav.css
+++ b/estilos/nav.css
@@ -1,4 +1,6 @@
 #nav {
+  width: 200px;
+  height: 200px;
   background-color: #e9c4f4; /* Lila */
   font-style: italic;
   padding: 10px;
@@ -10,14 +12,19 @@
 }
 
 #nav ul {
+  height: 90%;
   list-style: none;
-  padding: 0;
-  margin: 0;
+  padding: 10px;
+  margin: 5px 0;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
 }
 
 #nav li {
-  margin: 10px 0;
+  padding: 10px;
+  background-color: #f0e6f7; /* Lila claro */
+  border-radius: 5px;
+  margin-bottom: 70px ;
   color: #4b0082;
   cursor: pointer;
   border-radius: 5px;
