--- a/estilos/banner.css
+++ b/estilos/banner.css
@@ -14,3 +14,14 @@
   object-fit: cover;
   display: block;
 }
+@media (max-width: 768px) {
+    #banner {
+        padding: 10px;
+        margin-top: 5px;
+    }
+
+    #banner img {
+        height: 250px;        
+        object-fit: cover;    
+}
+ }
