--- a/estilos/header.css
+++ b/estilos/header.css
@@ -14,7 +14,26 @@ header img {
 }
 
 .titulo {
-  color: #e9c4f4; /* Lila */
+  color: #e9c4f4; 
   font-style: italic;
   margin: 0 15px;
+}
+@media (max-width: 768px) {
+    header {
+        flex-direction: column;      
+        align-items: center;
+        padding: 15px 10px;
+        text-align: center;
+    }
+
+    header img {
+        width: 40px;              
+        height: 40px;
+        margin-bottom: 10px;
+    }
+
+    .titulo {
+        font-size: 16px;            
+        margin: 5px 0 0;
+    }
 }
